--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="/firstDesign-master/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="/firstDesign-master/css/all.css" />
+    <link rel="stylesheet" href="/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="/css/all.css" />
     <title>Portfolio</title>
   </head>
   <body>
@@ -104,11 +101,7 @@
           </p>
         </div>
         <div class="about-image">
-          <img
-            src="/firstDesign-master/imgs/illustration.jpg"
-            width="600px"
-            alt=""
-          />
+          <img src="/imgs/illustration.jpg" width="600px" alt="" />
         </div>
       </div>
     </div>
@@ -143,15 +136,14 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="image-box">
-          <img src="imgs/01.jpg" alt="image one" />
-          <img src="/firstDesign-master/imgs/01.jpg" alt="" />
-          <img src="/firstDesign-master/imgs/02.jpg" alt="image two" />
-          <img src="/firstDesign-master/imgs/03.jpg" alt="image three" />
-          <img src="/firstDesign-master/imgs/04.jpg" alt="image four" />
-          <img src="/firstDesign-master/imgs/05.jpg" alt="" />
-          <img src="/firstDesign-master/imgs/06.jpg" alt="" />
-          <img src="/firstDesign-master/imgs/07.jpg" alt="" />
-          <img src="/firstDesign-master/imgs/08.jpg" alt="" />
+          <img src="/imgs/01.jpg" alt="image one" />
+          <img src="/imgs/02.jpg" alt="image two" />
+          <img src="/imgs/03.jpg" alt="image three" />
+          <img src="/imgs/04.jpg" alt="image four" />
+          <img src="/imgs/05.jpg" alt="" />
+          <img src="/imgs/06.jpg" alt="" />
+          <img src="/imgs/07.jpg" alt="" />
+          <img src="/imgs/08.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -216,7 +208,7 @@
         <h2>Feautures</h2>
         <div class="feat-box">
           <div class="feat-content">
-            <img src="/firstDesign-master/imgs/graphic-design.svg" alt="" />
+            <img src="/imgs/graphic-design.svg" alt="" />
             <h2>Lorem, ipsum dolor.</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
@@ -225,7 +217,7 @@
             </p>
           </div>
           <div class="feat-content">
-            <img src="/firstDesign-master/imgs/hosting-icon.svg" alt="" />
+            <img src="/imgs/hosting-icon.svg" alt="" />
             <h2>Lorem, ipsum dolor.</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
@@ -234,7 +226,7 @@
             </p>
           </div>
           <div class="feat-content">
-            <img src="/firstDesign-master/imgs/web-design.svg" alt="" />
+            <img src="/imgs/web-design.svg" alt="" />
             <h2>Lorem, ipsum dolor.</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
@@ -243,7 +235,7 @@
             </p>
           </div>
           <div class="feat-content">
-            <img src="/firstDesign-master/imgs/graphic-design.svg" alt="" />
+            <img src="/imgs/graphic-design.svg" alt="" />
             <h2>Lorem, ipsum dolor.</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
@@ -252,7 +244,7 @@
             </p>
           </div>
           <div class="feat-content">
-            <img src="/firstDesign-master/imgs/hosting-icon.svg" alt="" />
+            <img src="/imgs/hosting-icon.svg" alt="" />
             <h2>Lorem, ipsum dolor.</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
@@ -261,7 +253,7 @@
             </p>
           </div>
           <div class="feat-content">
-            <img src="/firstDesign-master/imgs/web-design.svg" alt="" />
+            <img src="/imgs/web-design.svg" alt="" />
             <h2>Lorem, ipsum dolor.</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis
@@ -283,10 +275,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
               earum sed minus est suscipit optio?
             </p>
-            <img
-              src="/firstDesign-master/imgs/hosting-icon.svg"
-              alt="not afailable"
-            />
+            <img src="/imgs/hosting-icon.svg" alt="not afailable" />
             <p>CEO Of Company</p>
           </div>
           <div class="test-content">
@@ -294,10 +283,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
               earum sed minus est suscipit optio?
             </p>
-            <img
-              src="/firstDesign-master/imgs/hosting-icon.svg"
-              alt="not afailable"
-            />
+            <img src="/imgs/hosting-icon.svg" alt="not afailable" />
             <p>CEO Of Company</p>
           </div>
           <div class="test-content">
@@ -305,10 +291,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
               earum sed minus est suscipit optio?
             </p>
-            <img
-              src="/firstDesign-master/imgs/hosting-icon.svg"
-              alt="not afailable"
-            />
+            <img src="/imgs/hosting-icon.svg" alt="not afailable" />
             <p>CEO Of Company</p>
           </div>
         </div>
